kubernetes/cast-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-service
  template:
    metadata:
      labels:
        app: cast-service
    spec:
      containers:
      - name: cast-service
        image: matiasroje/cast-service:1.1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cast-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: cast-service
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8000
