kubernetes/movie-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-db
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-db
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
      - name: movie-db
        image: postgres:12.1-alpine

        volumeMounts:
        - name: movie-db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: movie-db-data
        persistentVolumeClaim:
          claimName: movie-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: movie-db
  namespace: prod
spec:
  selector:
    app: movie-db
  ports:
    - protocol: TCP
      port: 5432  # Default Postgres port
      targetPort: 5432
