kubernetes/movie-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-db
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-db
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
      - name: movie-db
        image: postgres:12.1-alpine

        volumeMounts:
        - name: movie-db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: movie-db-data
        persistentVolumeClaim:
          claimName: movie-db-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
      - name: movie-service
        image: matiasroje/movie-service:1.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: prod
spec:
  type: ClusterIP  # Using ClusterIP for internal communication
  selector:
    app: movie-service
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8000
